# tino

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml
src/: main.rs
src/app/: config_file.rs  mod.rs  utils.rs
src/ratatui_app/: app_and_rust_traits_impls.rs  helper_methods.rs  implementations.rs  mod.rs  types.rs
src/tests/: .tino.toml
