[package]
name = "tino"
version = "0.1.0"
description = "TINO (Todo-Ideas-Notes-Organizer), A terminal application (TUI) to organize todos, ideas and notes written in markdown."
authors = ["LuisanaMTDev <luisanamartineztorres25@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
